[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://game/objects/investment/investment_box.gd" id="1"]
[ext_resource type="PackedScene" path="res://addons/godot-xr-tools/objects/snap_zone.tscn" id="2"]

[sub_resource type="BoxMesh" id="1"]
size = Vector3(0.6, 0.25, 0.6)

[sub_resource type="BoxShape3D" id="2"]
size = Vector3(0.6, 0.25, 0.6)

[node name="InvestmentBox" type="Node3D"]
script = ExtResource("1")

[node name="Body" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body"]
mesh = SubResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body"]
shape = SubResource("2")

[node name="SnapZone" parent="." instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
grab_distance = 0.18
snap_mode = 0
snap_require = "fits_in_storage"

[node name="CountdownLabel" type="Label3D" parent="."]
pixel_size = 0.003
billboard = 1
text = "Place Money"
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0.35)

[node name="ReleasePoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 1.0
one_shot = false
